index.html edited online with Bitbucket

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>ImageLines Configurator</title>
-    <!-- <script src="https://viewer.shapediver.com/v2/2.20.2/sdv.concat.min.js"></script> -->
+    <script src="https://viewer.shapediver.com/v2/2.20.2/sdv.concat.min.js"></script> 
     <link
       rel="stylesheet"
       type="text/css"
