added note that index: line 27 should be commented out for build

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>ImageLines Configurator</title>
+    <!--  Comment next line out before building for app -->
     <script src="https://viewer.shapediver.com/v2/2.20.2/sdv.concat.min.js"></script> 
     <link
       rel="stylesheet"
