Added firebase database realtime logging. added IP getter.

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>ImageLines Configurator</title>
-    <!-- <script src="https://viewer.shapediver.com/v2/2.20.2/sdv.concat.min.js"></script> -->
+    <script src="https://viewer.shapediver.com/v2/2.20.2/sdv.concat.min.js"></script>
     <link
       rel="stylesheet"
       type="text/css"
@@ -48,5 +48,18 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <!-- comment out the line below and add back in the inline file -->
+    <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use -->
+    <!-- <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-analytics.js"></script> -->
+    <!-- <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-firestore.js"></script> -->
+    
+    <!-- comment out the line below and add back in the inline file -->
+    <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-database.js"></script>
+    
   </body>
 </html>
